--- a/loan_prediction_classification.ipynb
+++ b/loan_prediction_classification.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMm9MyrXvRjdAYN5CtNEjmz",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMeBFmVIJCOEr+QcWEzOM6f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -549,7 +550,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "id": "yk11M-YaTyyl",
         "outputId": "09034ea3-b6cf-4990-a813-1806351d2629"
@@ -1429,7 +1430,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 384
+          "height": 268
         },
         "id": "tbFD3ey7V54S",
         "outputId": "e3169cf9-53d9-45c7-ed23-c39f195bb2f1"
@@ -1462,7 +1463,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 581
+          "height": 447
         },
         "id": "HYfKzjJ0Webh",
         "outputId": "ed4ef4f0-1a05-4707-9f46-e352518b951e"
@@ -1490,7 +1491,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 486
+          "height": 339
         },
         "id": "_8GqpO0uac7n",
         "outputId": "fcdddf43-7ed5-4475-a5ca-a6b5e0c20f61"
@@ -1530,7 +1531,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 573
+          "height": 445
         },
         "id": "lcSBybYOYRge",
         "outputId": "260449ec-d062-48d3-b768-e2ed1de59d90"
@@ -1562,7 +1563,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 575
+          "height": 442
         },
         "id": "bFlWN8AkaA7s",
         "outputId": "907d775b-fcf3-4503-9995-85718f1f19a7"
@@ -1594,7 +1595,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 667
+          "height": 483
         },
         "id": "33o1Gvvrb-sa",
         "outputId": "fb007f8e-3a26-494b-9b15-6c946e93086f"
@@ -2099,7 +2100,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Evalute"
+        "## Evaluate"
       ],
       "metadata": {
         "id": "tSzHm8Xt-03U"
